--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set-option -g history-limit 100000
 
 # modern colors
 set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",alacritty:Tc"
+#set -ga terminal-overrides ",alacritty:Tc"
 #
 ## unbind the prefix and bind it to Ctrl-a like screen
 unbind C-b
@@ -30,7 +30,7 @@ set -g set-titles-string "#T"
 set -g mode-keys vi
 #
 ## Mouse friendly - this does not make sense
-set -g mouse on
+#set -g mouse on
 #
 ## Move between panes with vi keys
 bind h select-pane -L
@@ -46,37 +46,3 @@ bind l select-pane -R
 set -g status-right ''
 set -g status-right-length 0
 
-#### COLOUR (Solarized 256)
-
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
-
-# bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
