--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# get xterm keys to work - if they do not
+set-window-option -g xterm-keys
+
 # set scroll history to 100,000 lines
 set-option -g history-limit 100000
 
