--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,12 @@
 # get xterm keys to work - if they do not
-set-window-option -g xterm-keys
+#set-window-option -g xterm-keys
 
 # set scroll history to 100,000 lines
 set-option -g history-limit 100000
 
 # modern colors
-set -g default-terminal "xterm-256color"
-#set -ga terminal-overrides ",alacritty:Tc"
+#set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",alacritty:Tc"
 #
 ## unbind the prefix and bind it to Ctrl-a like screen
 unbind C-b
