--- a/alacritty.yml
+++ b/alacritty.yml
@@ -117,7 +117,8 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: "monospace"
+    #family: "monospace"
+    family: "Noto Sans Mono"
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
