--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,16 +12,17 @@ set -ga terminal-overrides ",alacritty:Tc"
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
-#
-## copy to X clipboard
-##bind -T copy-mode-vi v send -X begin-selection
-##bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard &> /dev/null'
-##bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard &> /dev/null'
-#
-## shortcut for moving tmux buffer to clipboard
-## useful if you've selected with the mouse
-# bind-key -nr C-y run "tmux show-buffer | xclip -in -selection clipboard &> /dev/null"
-#
+
+## VIM mode
+set -g mode-keys vi
+set -g mouse on
+
+# https://www.rockyourcode.com/copy-and-paste-in-tmux/
+
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard &> /dev/null'
+bind -T copy-mode-vi Enter send-keys -X cancel
+
 ## Avoid ESC delay
 set -s escape-time 0
 #
@@ -29,23 +30,42 @@ set -s escape-time 0
 set -g set-titles on
 set -g set-titles-string "#T"
 #
-## VIM mode
-set -g mode-keys vi
-#
-## Mouse friendly - this does not make sense
-#set -g mouse on
-#
 ## Move between panes with vi keys
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-######################
-### DESIGN CHANGES ###
-######################
-
 # Avoid date/time taking up space
 set -g status-right ''
 set -g status-right-length 0
 
+# default statusbar colors
+# but a shade darker to show remote
+set-option -g status-style "fg=#bdae93,bg=#1c1816"
+
+# default window title colors
+set-window-option -g window-status-style "fg=#bdae93,bg=default"
+
+# active window title colors
+set-window-option -g window-status-current-style "fg=#fabd2f,bg=default"
+
+# pane border
+set-option -g pane-border-style "fg=#3c3836"
+set-option -g pane-active-border-style "fg=#504945"
+
+# message text
+set-option -g message-style "fg=#d5c4a1,bg=#3c3836"
+
+# pane number display
+set-option -g display-panes-active-colour "#b8bb26"
+set-option -g display-panes-colour "#fabd2f"
+
+# clock
+set-window-option -g clock-mode-colour "#b8bb26"
+
+# copy mode highlight
+set-window-option -g mode-style "fg=#bdae93,bg=#504945"
+
+# bell
+set-window-option -g window-status-bell-style "fg=#3c3836,bg=#fb4934"
